LU-19860 mdc: fix missing mutex_unlock in chlg_obd_get()

chlg_obd_get() acquires chlg_registered_dev_lock but fails
to release it when ced_obds list is empty, returning NULL
with the mutex still held. This causes a deadlock for any
subsequent caller attempting to acquire the same mutex.

Add the missing mutex_unlock() call before returning NULL.

Test-Parameters: trivial
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I8871254b077923178be5cce0d3b1b0386f3242da
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63849
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>